--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,9 +18,11 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
-<!ENTITY APP_NAME "NeverTooManyBooks">
-]>
+  -->
+
+<!DOCTYPE resources [
+    <!ENTITY APP_NAME "NeverTooManyBooks">
+    ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’)
 --><!--suppress LongLine --><resources xmlns:tools="http://schemas.android.com/tools">
     <plurals name="displaying_n_books">
@@ -449,8 +452,7 @@
     <string name="option_barcode_scan_mode_manual">Manuel</string>
     <string name="option_barcode_scan_mode_continuous">Numériser en continu</string>
     <string name="option_book_sync_list_with_details">Synchroniser/positionner la liste</string>
-    <string name="option_cover_crop">Rogner</string>
-    <string name="option_cover_edit">Démarrer l’éditeur</string>
+    <string name="action_crop">Rogner</string>
     <string name="option_cover_replace">Remplacer…</string>
     <string name="option_cover_replace_from_alt_editions">À partir d’autres éditions…</string>
     <string name="option_cover_replace_from_camera">À partir de l’appareil photo…</string>
@@ -504,7 +506,7 @@
     <string name="pe_ui_theme_light">Clair</string>
     <string name="pt_barcode_scanner">Scanner de code à barres</string>
     <string name="pt_bob_show_details">Détails du livre affichés dans la liste</string>
-    <string name="lbl_filters">Filtres de livres</string>
+    <string name="lbl_filters">Filtres</string>
     <string name="pc_image_cache">Cache d’images</string>
     <string name="pt_bob_groups">Groupes</string>
     <string name="pc_ui">Interface utilisateur</string>
@@ -586,7 +588,7 @@
     <string name="ps_bob_books_under_multiple_primary_author_only">Sous auteur principal(e) seulement</string>
     <string name="ps_bob_books_under_multiple_primary_publisher_only">sous leur éditeur principal uniquement</string>
     <string name="ps_bob_books_under_multiple_primary_series_only">Sous séries principal(e) seulement</string>
-    <string name="pv_bob_header_filters">Filtres de livres</string>
+    <string name="pv_bob_header_filters">Filtres</string>
     <string name="pv_bob_header_nr_of_books">Montrer le nombre de livres</string>
     <string name="pv_bob_header_style_name">Nom du style</string>
     <string name="pv_reformat_titles_prefixes">le|Le|la|La|les|Les|un|Un|une|Une</string>
@@ -748,4 +750,5 @@
     <string name="acra_report_saved">Vous pouvez maintenant visiter la page du projet sur Github et enregistrer un nouveau problème. Veuillez joindre le rapport précédemment enregistré au problème. Si vous n’avez pas encore de compte Github, vous devez en créer un.</string>
     <string name="action_report">Rapport</string>
     <string name="error_invalid_url">Adresse (URL) invalide</string>
+    <string name="lbl_certificate_validity_period">Validité : %1$s</string>
 </resources>
