--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,9 +18,11 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
-<!ENTITY APP_NAME "NeverTooManyBooks">
-]>
+  -->
+
+<!DOCTYPE resources [
+    <!ENTITY APP_NAME "NeverTooManyBooks">
+    ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources xmlns:tools="http://schemas.android.com/tools">
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d libro</item>
@@ -448,8 +451,7 @@
     <string name="option_barcode_scan_mode_manual">Manuale</string>
     <string name="option_barcode_scan_mode_continuous">Scansione continua</string>
     <string name="option_book_sync_list_with_details">Sincronizza/posiziona la lista</string>
-    <string name="option_cover_crop">Ritaglia</string>
-    <string name="option_cover_edit">Avvia l’editor</string>
+    <string name="action_crop">Ritaglia</string>
     <string name="option_cover_replace">Sostituisci…</string>
     <string name="option_cover_replace_from_alt_editions">Da altre edizioni…</string>
     <string name="option_cover_replace_from_camera">Dalla fotocamera…</string>
@@ -503,7 +505,7 @@
     <string name="pe_ui_theme_light">Chiaro</string>
     <string name="pt_barcode_scanner">Scanner di codici a barre</string>
     <string name="pt_bob_show_details">Dettagli del libro visualizzati nell’elenco</string>
-    <string name="lbl_filters">Filtra libri</string>
+    <string name="lbl_filters">Filtri</string>
     <string name="pc_image_cache">Cache di immagini</string>
     <string name="pt_bob_groups">Raggruppamenti</string>
     <string name="pc_ui">Interfaccia Utente</string>
@@ -585,7 +587,7 @@
     <string name="ps_bob_books_under_multiple_primary_author_only">Solo sotto autore primario</string>
     <string name="ps_bob_books_under_multiple_primary_publisher_only">solo con il loro editore principale</string>
     <string name="ps_bob_books_under_multiple_primary_series_only">Solo sotto serie primario</string>
-    <string name="pv_bob_header_filters">Filtra libri</string>
+    <string name="pv_bob_header_filters">Filtri</string>
     <string name="pv_bob_header_nr_of_books">Mostra numero di libri</string>
     <string name="pv_bob_header_style_name">Nome dello stile</string>
     <string name="pv_reformat_titles_prefixes" tools:ignore="TypographyQuotes">il|lo|la|l’|i||gli|le|un’|uno|una|un</string>
@@ -747,4 +749,5 @@
     <string name="acra_report_saved">Ora è possibile visitare la pagina del progetto su Github e creare un nuovo problema. Si prega di allegare al problema il rapporto precedentemente salvato. Se non si dispone ancora di un account Github, è necessario crearne uno.</string>
     <string name="action_report">Segnala</string>
     <string name="error_invalid_url">Indirizzo (URL) non valido</string>
+    <string name="lbl_certificate_validity_period">Validità: %1$s</string>
 </resources>
