--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,9 +18,11 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
-<!ENTITY APP_NAME "NeverTooManyBooks">
-]>
+  -->
+
+<!DOCTYPE resources [
+    <!ENTITY APP_NAME "NeverTooManyBooks">
+    ]>
 <!-- Quotes “...”  (older «…» are no longer used as verified with a native speaker) - Regex to find wrong ones: ('|„|‘|’|«|») --><!--suppress LongLine --><resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pt">
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d livro</item>
@@ -295,7 +298,7 @@
     <string name="option_set_incomplete">Definir como “incompleto”</string>
     <string name="option_author_details">Todas as obras deste autor</string>
     <string name="option_author_works_toc">Apenas títulos da Tabela de Conteúdos</string>
-    <string name="option_cover_crop">Cortar</string>
+    <string name="action_crop">Cortar</string>
     <string name="option_cover_replace_from_gallery">Da Galeria…</string>
     <string name="option_import">Importar</string>
     <string name="option_download_ebook_format">Transferir o eBook (%1$s)</string>
@@ -356,7 +359,6 @@
     <string name="lbl_condition_dust_cover_none">Nenhum</string>
     <string name="option_storage_select">Usar “%1$s”</string>
     <string name="warning_import_csv">AVISO: A importação de dados pode atualizar os registos de livros existentes com novas informações se a coluna UUID não estiver presente e o ID no ficheiro de importação for o mesmo que um ID existente. Normalmente, isto não tem qualquer problema se tiver alterado um campo num ficheiro exportado. Se tiver criado um novo registo de livro ou estiver a importar os livros de outra pessoa, certifique-se de que o campo UUID está presente ou que o campo ID está em branco.</string>
-    <string name="option_cover_edit">Iniciar editor</string>
     <string name="confirm_delete_series">Excluir a série “%1$s”?
 \n
 \nOs livros em si não serão excluídos.
@@ -774,4 +776,5 @@
     <string name="acra_report_saved">Pode agora visitar a página do projeto no Github e registar um novo problema. Anexe o relatório guardado anteriormente ao problema. Se ainda não tiver uma conta no Github, terá de criar uma.</string>
     <string name="action_report">Informar</string>
     <string name="error_invalid_url">Endereço inválido (URL)</string>
+    <string name="lbl_certificate_validity_period">Validade: %1$s</string>
 </resources>
